[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Randy J. Ray <rjray@blackperl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
regex = "1.11.1"
